# cpp-boilerplate

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  CMakePresets.json  Makefile  README.md  conanfile.py  main.cpp  main.h
.github/workflows/: build.yml
include/cpp_boilerplate/: record_summary.hpp  split.hpp
profiles/: default  linux  linux-clang  macos  sanitize
src/: main.cpp  split.cpp
t/: CMakeLists.txt  SConscript  main_test.cpp
tests/: split_test.cpp
